version 0.99.2 - XX-Apr-2010
 . [FIX] ActionManager: removeByTag doesn't crash if action is also running (issue #841)
 . [FIX] EAGLView: If discard-framebuffer is supported and using depthBuffer, then discard it before swapping (issue #XXX)
 . [FIX] Grid: simplied code, easier to maintain, added support for flipped textures
 . [FIX] Sprite/SpriteSheet: reorderChild works as expected when using subchildren (issue #767)
 . [FIX] Xcode: compiles OK with LLVM Compiler SDK 4.0beta2
 . [3RD] Box2d: Updatd to SVN r100 (v2.1.2)

version 0.99.2-rc - 15-Apr-2010
 . [NEW] Actions: Added blocks actions via PLBlocks: CCCallBlock and CCCallBlockN (issue #699)
 . [NEW] Actions: Added CCFollow, an action that follows a CCNode (issue #738)
 . [NEW] Actions: Added CCPropertyAction, a generic way to update properties using an action (issue #491)
 . [NEW] MenuItem: MenuItems supports blocks via PLBlocks (issue #699)
 . [NEW] Texture2D: added support for NPOT textures where available (issue #818)
 . [NEW] Templates: file templates for CCLayer, CCNode, CCSprite (issue #XXX)
 . [NEW] TMXMaps: added support for per-tile properties (issue #606)
 . [NEW] ProfilingTimer: new class to test performance (issue #724)
 . [NEW] Xcode: added "build all tests" target (issue #XXX)
 . [FIX] Box2d: GLES-DebugDraw draws non-solid circles as non-solid circles (issue #831)
 . [FIX] Director: FPSLabel uses RGBA4444 texture to reduce possible performance impact (issue #658)
 . [FIX] EAGLView: swapBuffers doesn't bind the color buffer. It assumes it is already bound (issue #XXX)
 . [FIX] Particles: constants stars with kCC (issue #809)
 . [FIX] Particles: Asserts if start/end size is <0 or >64
 . [FIX] Protocols: CCAnimationProtocol removed. Merged into CCAnimation (issue #XXX)
 . [FIX] Protocols: CCFrameProtocol removed. Merged into CCSprite (issue #XXX)
 . [FIX] Ribbon: fixed memory corruption bug (issue #XXX)
 . [FIX] Ribbon/RenderTexture: use objective-c like ivars (part of issue #733)